# clib-template

./: configure.ac  package.mk
src/: Makefile.in
